--- a/FinalThesis/FinalThesis.vcxproj
+++ b/FinalThesis/FinalThesis.vcxproj
@@ -28,12 +28,14 @@
     <ClInclude Include="FramesGrabberVC.h" />
     <ClInclude Include="Gaussian3.h" />
     <ClInclude Include="HigherBetterMetric.h" />
+    <ClInclude Include="LaserSpeckleVelocimeter.h" />
     <ClInclude Include="LowerBetterMetric.h" />
     <ClInclude Include="MatchingMethod.h" />
     <ClInclude Include="FullSearch.h" />
     <ClInclude Include="FullSearchFFT.h" />
     <ClInclude Include="FullSearchSpatial.h" />
     <ClInclude Include="LowResolutionPruning.h" />
+    <ClInclude Include="MethodsFactory.h" />
     <ClInclude Include="SpiralSearch.h" />
     <ClInclude Include="Method.h" />
     <ClInclude Include="MetricCC.h" />
