--- a/FinalThesis/FinalThesis.vcxproj.filters
+++ b/FinalThesis/FinalThesis.vcxproj.filters
@@ -42,12 +42,6 @@
     <ClInclude Include="FramesGrabber.h">
       <Filter>FramesGrabber</Filter>
     </ClInclude>
-    <ClInclude Include="HigherBetterMetric.h">
-      <Filter>SimilarityMetrics</Filter>
-    </ClInclude>
-    <ClInclude Include="LowerBetterMetric.h">
-      <Filter>SimilarityMetrics</Filter>
-    </ClInclude>
     <ClInclude Include="MetricCC.h">
       <Filter>SimilarityMetrics</Filter>
     </ClInclude>
@@ -73,9 +67,6 @@
       <Filter>SimilarityMetrics</Filter>
     </ClInclude>
     <ClInclude Include="MetricXC.h">
-      <Filter>SimilarityMetrics</Filter>
-    </ClInclude>
-    <ClInclude Include="SimilarityMetric.h">
       <Filter>SimilarityMetrics</Filter>
     </ClInclude>
     <ClInclude Include="Evaluator.h">
@@ -120,14 +111,23 @@
     <ClInclude Include="FeaturesMethod.h">
       <Filter>FeaturesMethods</Filter>
     </ClInclude>
-    <ClInclude Include="FeatureTracking.h">
-      <Filter>FeaturesMethods</Filter>
-    </ClInclude>
     <ClInclude Include="Gaussian3plus.h">
       <Filter>SubpixelEstimators</Filter>
     </ClInclude>
     <ClInclude Include="SparseOpticalFlow.h">
       <Filter>FeaturesMethods</Filter>
+    </ClInclude>
+    <ClInclude Include="FeatureMatching.h">
+      <Filter>FeaturesMethods</Filter>
+    </ClInclude>
+    <ClInclude Include="Metric.h">
+      <Filter>SimilarityMetrics</Filter>
+    </ClInclude>
+    <ClInclude Include="SimilarityMetric.h">
+      <Filter>SimilarityMetrics</Filter>
+    </ClInclude>
+    <ClInclude Include="DissimilarityMetric.h">
+      <Filter>SimilarityMetrics</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
