--- a/FinalThesis/FinalThesis.vcxproj.filters
+++ b/FinalThesis/FinalThesis.vcxproj.filters
@@ -16,9 +16,6 @@
     <Filter Include="FramesGrabber">
       <UniqueIdentifier>{482c8471-a445-4266-bfe8-751256780904}</UniqueIdentifier>
     </Filter>
-    <Filter Include="SimilarityMetrics">
-      <UniqueIdentifier>{baad8444-e00c-440c-8771-00a098e471b8}</UniqueIdentifier>
-    </Filter>
     <Filter Include="SubpixelEstimators">
       <UniqueIdentifier>{08383054-6da2-4e11-a6f0-3f93fc3abefc}</UniqueIdentifier>
     </Filter>
@@ -27,6 +24,15 @@
     </Filter>
     <Filter Include="FeaturesMethods">
       <UniqueIdentifier>{85d294e5-ea41-4963-b2bd-dacb159af392}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Metrics">
+      <UniqueIdentifier>{baad8444-e00c-440c-8771-00a098e471b8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Metrics\SimilarityMetrics">
+      <UniqueIdentifier>{adec0052-f02f-48fe-8f6f-960780de0612}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Metrics\DissimilarityMetrics">
+      <UniqueIdentifier>{2f355022-8e18-4408-8f3b-6ddba8fec3e8}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -42,32 +48,8 @@
     <ClInclude Include="FramesGrabber.h">
       <Filter>FramesGrabber</Filter>
     </ClInclude>
-    <ClInclude Include="MetricCC.h">
-      <Filter>SimilarityMetrics</Filter>
-    </ClInclude>
-    <ClInclude Include="MetricMAD.h">
-      <Filter>SimilarityMetrics</Filter>
-    </ClInclude>
-    <ClInclude Include="MetricNCC.h">
-      <Filter>SimilarityMetrics</Filter>
-    </ClInclude>
-    <ClInclude Include="MetricNSSD.h">
-      <Filter>SimilarityMetrics</Filter>
-    </ClInclude>
-    <ClInclude Include="MetricNXC.h">
-      <Filter>SimilarityMetrics</Filter>
-    </ClInclude>
-    <ClInclude Include="MetricSAD.h">
-      <Filter>SimilarityMetrics</Filter>
-    </ClInclude>
     <ClInclude Include="MetricsFactory.h">
-      <Filter>SimilarityMetrics</Filter>
-    </ClInclude>
-    <ClInclude Include="MetricSSD.h">
-      <Filter>SimilarityMetrics</Filter>
-    </ClInclude>
-    <ClInclude Include="MetricXC.h">
-      <Filter>SimilarityMetrics</Filter>
+      <Filter>Metrics</Filter>
     </ClInclude>
     <ClInclude Include="Evaluator.h">
       <Filter>Header Files</Filter>
@@ -93,9 +75,6 @@
     <ClInclude Include="MatchingMethod.h">
       <Filter>MatchingMethods</Filter>
     </ClInclude>
-    <ClInclude Include="SpiralSearch.h">
-      <Filter>MatchingMethods</Filter>
-    </ClInclude>
     <ClInclude Include="FullSearchSpatial.h">
       <Filter>MatchingMethods</Filter>
     </ClInclude>
@@ -118,19 +97,43 @@
       <Filter>FeaturesMethods</Filter>
     </ClInclude>
     <ClInclude Include="Metric.h">
-      <Filter>SimilarityMetrics</Filter>
+      <Filter>Metrics</Filter>
     </ClInclude>
     <ClInclude Include="SimilarityMetric.h">
-      <Filter>SimilarityMetrics</Filter>
+      <Filter>Metrics</Filter>
     </ClInclude>
     <ClInclude Include="DissimilarityMetric.h">
-      <Filter>SimilarityMetrics</Filter>
+      <Filter>Metrics</Filter>
     </ClInclude>
     <ClInclude Include="ModifiedSpiralSearch.h">
       <Filter>MatchingMethods</Filter>
     </ClInclude>
     <ClInclude Include="Gaussian5.h">
       <Filter>SubpixelEstimators</Filter>
+    </ClInclude>
+    <ClInclude Include="MetricNXC.h">
+      <Filter>Metrics\SimilarityMetrics</Filter>
+    </ClInclude>
+    <ClInclude Include="MetricXC.h">
+      <Filter>Metrics\SimilarityMetrics</Filter>
+    </ClInclude>
+    <ClInclude Include="MetricMAD.h">
+      <Filter>Metrics\DissimilarityMetrics</Filter>
+    </ClInclude>
+    <ClInclude Include="MetricNSSD.h">
+      <Filter>Metrics\DissimilarityMetrics</Filter>
+    </ClInclude>
+    <ClInclude Include="MetricSAD.h">
+      <Filter>Metrics\DissimilarityMetrics</Filter>
+    </ClInclude>
+    <ClInclude Include="MetricSSD.h">
+      <Filter>Metrics\DissimilarityMetrics</Filter>
+    </ClInclude>
+    <ClInclude Include="MetricZNXC.h">
+      <Filter>Metrics\SimilarityMetrics</Filter>
+    </ClInclude>
+    <ClInclude Include="MetricZXC.h">
+      <Filter>Metrics\SimilarityMetrics</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
